--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^1.0.6",
     "daisyui": "^2.31.0",
-    "react-daisyui": "^2.3.2",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-daisyui": "^2.3.2",
+    "react-dom": "18.1.0",
+    "react-modern-drawer": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
